# wyld-card

app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/mock/: mock_cards.dart
app/lib/entities/: card.dart  card.g.dart  person.dart  person.g.dart
app/lib/infrastructure/card_infra/: card_repository.dart
app/lib/presentation/main_page/: index_main_page.dart
app/lib/shared/: gen_dialog.dart
app/lib/shared/Card/: businessCard.dart
app/lib/shared/animations/: animated_check.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
firmware/: Cargo.toml  rustfmt.toml
firmware/.cargo/: config.toml
firmware/bluedroid/: Cargo.toml
firmware/bluedroid/.cargo/: config.toml
firmware/bluedroid/examples/: server.rs
firmware/bluedroid/src/gatt_server/: custom_attributes.rs  service.rs
firmware/bluedroid/src/utilities/: connection.rs
firmware/pn532/: Cargo.toml
firmware/pn532/.cargo/: config.toml
firmware/pn532/examples/: hsu-test-util.rs
firmware/pn532/src/: i2c.rs  lib.rs  protocol.rs  serialport.rs
firmware/src/: main.rs
(+19 files in other folders)
